Ref: Optional class usage.